fixed footer covering content when sticky

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -14,7 +14,10 @@ html {
  body {
   font-family: 'Open Sans', sans-serif;
   background-color: #f2f2f2;
-  min-height: 100vh;
+ // min-height: 100vh;
+  min-height: 400px;
+  margin-bottom: 100px;
+  clear: both;
   position: relative;
 }
 
